k8s/dev/services/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: http-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: static-service-dev
            port:
              number: 80
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: webserver-service-dev
            port: 
              number: 80
